syntax = "proto3";

import "ikipb/iki_iam/iam.proto";

option go_package = "/groupsvc";

package groupsvc;

service GroupSvc {
  rpc Get (GetRequest) returns (GetResponse) {}
  rpc List (ListRequest) returns (ListResponse) {}
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  iam.Group group = 1;
}

message ListRequest {

}

message ListResponse {
  repeated iam.Group groups = 1;
}

message CreateRequest {
  string name = 1;
}

message CreateResponse {
  iam.Group group = 1;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {

}
